<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HighScoreActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/t_highscore"
        android:textSize="@android:dimen/app_icon_size" />

    <ListView
        android:id="@+id/l_highscores"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/b_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/b_menu"
        android:onClick="onClick" />

    <Button
        android:id="@+id/b_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/b_reset"
        android:onClick="onClick"/>
</LinearLayout>